@@ -5,12 +5,13 @@
 # This is Dockerfile template for Cricket based services
 # 
 # The file is used by Ant build to cereate Dockerfile.
-# 1.2.3 parameter will be replaced automatically with the actual project version configured in build.xml
+# 1.2.4 parameter will be replaced automatically with the actual project version configured in build.xml
 #
-FROM gskorupa/jelastic-java10:latest
+FROM azul/zulu-openjdk-alpine:13.0.1
 
 WORKDIR /usr/signomix
 RUN mkdir /usr/signomix/data
+RUN mkdir /usr/signomix/log
 
 #VOLUME /usr/signomix/data
 #VOLUME /usr/signomix/www
@@ -18,10 +19,10 @@ RUN mkdir /usr/signomix/data
 VOLUME /dbdata
 
 COPY dist/data/cricket_publickeystore.jks /usr/signomix/data
-COPY dist/signomix-1.2.3.jar /usr/signomix/
+COPY dist/signomix-ce-1.2.4.jar /usr/signomix/
 COPY dist/config/cricket.json /usr/signomix/config/
 COPY src/js/device-script-template.js /usr/signomix/config/
 COPY src/js/payload-decoder-envelope.js /usr/signomix/config/
 COPY www /usr/signomix/www
 
-CMD ["java", "--illegal-access=deny", "--add-modules","java.xml.bind", "--add-modules", "java.activation", "-Xms50m",  "-Xmx100m", "-jar", "./signomix-1.2.3.jar", "-r", "-c", "config/cricket.json"]
+CMD ["java", "-Xms50m", "-Xmx100m", "-jar", "signomix-ce-1.2.4.jar", "-r", "-c", "config/cricket.json"]
